fix: arreglos varios